- diskdrake:
  o fix setting mount point of a /dev/mdX (#39142)
    (regression introduced in 10.8)
- list gspca, ov51x-jpeg and qc-usb-messenger in webcam modules group
- harddrake:
  o recommend using insensitive search (#39136)

Version 10.18 - 21 March 2008

- drakfont:
  o fix importing fonts without chkfontpath (#37604)
  o stop restarting XFS server
- diskdrake:
  o keep existing swap UUID (#38877)
- partitioning wizard: do not show error message in wizard mode when
  cancel is clicked (clean wizard window instead)
- finish-install:
  o allow to ask both root and user accounts in the same step
  o replace home path in user config files when renaming a user (#30380)

Version 10.17 - 20 March 2008

- use UUID by default (for diskdrake and draklive-install)
- finish-install:
  o write modprobe.conf after configuring network
  o do not configure network if already up
  o allow to use a simplified time step
    (no timezone selection, ntp settings as advanced)
- move functions to get available space from installer
  (to be used in draklive-install)
- localedrake: update OpenOffice/BrOffice alternative according to
  selected lang (#37820)

Version 10.16.1 - 18 March 2008

- handle position for paned widgets (needed for rpmdrake, #38762)

Version 10.16 - 18 March 2008

- adduserdrake:
  o display kdm/gdm icon again (was disabled on year ago)
- do not write aliases for asus_acpi and thinkpad_acpi in
  modprobe.preload, the modules are now handled by coldplug
- draksec
  o do not continue if installing msec crashed or was canceled (#38911)
- localdrake:
  o do not make /etc/sysconfig/i18n readable only by root in high
    security level (#39027)
- scannerdrake:
  o use provides instead of package name now that gurpmi handle them

Version 10.15 - 14 March 2008

- fix changing UID on forking
- scannerdrake: use package name instead of Provides.
- create Gtk2::Notify::Queue out of Gtk2::NotificationBubble::Queue
  for libnotify support in net_applet (#37509)
